<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bpm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/bmp"
            android:textSize="@dimen/text_size_heart" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="@dimen/text_size_heart" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/time"
            android:textSize="@dimen/text_size_heart" />
    </LinearLayout>
    
    <!-- <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        /> -->
    <ListView android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="15dip"
        
        android:listSelector="@android:color/transparent"
        android:divider="@null"
        android:dividerHeight="5dip"
        android:scrollbars="none"
        >
        <!--listSelector: remove listview click-effect -->
        <!--divider: remove listview divide  -->
        <!--scrollbars: remove  -->
    </ListView>
</LinearLayout>
